[package]
name = "jrsonnet-gcmodule"
version = "0.3.5"
authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2018"
license = "MIT"
description = "Cyclic garbage collection inspired by CPython's gc implementation."
keywords = ["gc", "garbage", "cycle", "rc"]
repository = "https://github.com/CertainLach/gcmodule"
categories = ["memory-management"]
readme = "README.md"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }

[dependencies]
jrsonnet-gcmodule-derive = { version = "0.3.5", optional = true, path = "gcmodule_derive" }
parking_lot = { version = "0.12.1", optional = true }

[features]
default = ["derive", "sync"]
debug = []
derive = ["jrsonnet-gcmodule-derive"]
nightly = []
sync = ["parking_lot"]
testutil = []

[workspace]
members = ["gcmodule_derive"]
