[workspace.package]
version = "0.3.9"
authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CertainLach/gcmodule"

[package]
name = "jrsonnet-gcmodule"
version.workspace = true
authors.workspace  = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cyclic garbage collection inspired by CPython's gc implementation."
keywords = ["gc", "garbage", "cycle", "rc"]
categories = ["memory-management"]
readme = "README.md"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }

[dependencies]
jrsonnet-gcmodule-derive = { version = "0.3.9", optional = true, path = "gcmodule_derive" }
parking_lot = { version = "0.12.3", optional = true }

[features]
default = ["derive", "sync"]
debug = []
derive = ["jrsonnet-gcmodule-derive"]
nightly = []
sync = ["parking_lot"]
testutil = []

[workspace]
members = ["gcmodule_derive"]

