[package]
name = "jrsonnet-gcmodule-derive"
version = "0.3.5"
authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2018"
license = "MIT"
description = "Generate code to implement Trace trait on structures."
repository = "https://github.com/CertainLach/gcmodule"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"

[dev-dependencies]
jrsonnet-gcmodule = { path = ".." }
