[package]
name = "jrsonnet-gcmodule-derive"
version.workspace = true
authors.workspace  = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate code to implement Trace trait on structures."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"

[dev-dependencies]
jrsonnet-gcmodule = { path = ".." }
