[package]
name = "gcmodule-derive"
version = "0.3.5"
authors = ["Jun Wu <quark@lihdd.net>", "Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2021"
license = "MIT"
description = "Generate code to implement Trace trait on structures."
repository = "https://github.com/ScottyThePilot/gcmodule"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"

[dev-dependencies]
gcmodule = { path = ".." }
